iptablesconf.conf
# Generated by iptables-save v1.8.7 on Tue Aug 24 16:41:06 2021
*mangle
:PREROUTING ACCEPT [5801:1482589]
:INPUT ACCEPT [2633:478260]
:FORWARD ACCEPT [3148:998913]
:OUTPUT ACCEPT [2338:8621612]
:POSTROUTING ACCEPT [5488:9621008]
COMMIT
# Completed on Tue Aug 24 16:41:06 2021
# Generated by iptables-save v1.8.7 on Mon Jan 31 17:09:56 2022
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:FORTESTSERVER - [0:0]
-A INPUT -p icmp -m icmp --icmp-type 8 -m recent --rcheck --seconds 1 --hitcount 2 --name ICMPALL --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m recent --set --name ICMPALL --mask 255.255.255.255 --rsource
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT

-A INPUT -i lo -j ACCEPT

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i judgeapi -j ACCEPT
-A INPUT -p tcp -m tcp -m multiport --dports 22 -j ACCEPT
-A INPUT -p udp -m udp -m multiport --dports 7654,7777,53 -j ACCEPT
-A FORWARD -i server -o judgeapi -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i server -o judgeapi -j DROP

-A FORWARD -i server -o lan -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i server -o lan -j DROP

-A FORWARD -i server -o testserver -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i server -o testserver -j DROP

-A FORWARD -i testserver -j FORTESTSERVER
COMMIT
# Completed on Mon Jan 31 17:09:56 2022
# Generated by iptables-save v1.8.7 on Mon Jan 31 17:09:56 2022
*nat
:PREROUTING ACCEPT [1:202]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.123.0/24 ! -o lan -j MASQUERADE
-A POSTROUTING -s 10.100.100.0/24 -o wan -j MASQUERADE
COMMIT
# Completed on Mon Jan 31 17:09:56 2022
